--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -346,7 +346,7 @@ async function fetchData() {
       const marketItem = market[drop.name];
       if (!marketItem) continue;
       let price = 0;
-      if (customPrices[itemName] && customPrices[itemName][type]) {
+      if (customPrices[drop.name] && customPrices[drop.name][type]) {
         price = customPrices[itemName][type];
       } else {
         price = useBidOnly ? (marketItem.bid ?? 0) : Math.max(marketItem.ask ?? 0, marketItem.bid ?? 0);
@@ -591,3 +591,4 @@ const lootTables = {
 
 </body>
 </html>
+
