--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -185,6 +185,34 @@
     background-color: #fff8e1;
     border-radius: 5px;
   }
+  input[type="number"] {
+  width: 100%;
+  padding: 6px 10px;
+  background-color: var(--table-bg);
+  color: var(--text-color);
+  border: 1px solid var(--table-header-bg);
+  border-radius: 5px;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+
+input[type="number"]:focus {
+  outline: none;
+  border-color: var(--highlight-color);
+  background-color: var(--bg-color);
+}
+input.edited {
+  background-color: rgba(255, 255, 100, 0.2);
+  border-color: #ffd700;
+}
+input[type="checkbox"] {
+  width: 18px;
+  height: 18px;
+  accent-color: var(--highlight-color);
+  cursor: pointer;
+  margin-right: 5px;
+}
+
 </style>
 </head>
 <body>
@@ -448,13 +476,15 @@ function updateCustomPrice(input) {
   const item = input.getAttribute('data-item');
   const type = input.getAttribute('data-type');
   const value = parseFloat(input.value) || 0;
-  
+
   if (!customPrices[item]) customPrices[item] = {};
   customPrices[item][type] = value;
 
-  // Update everything live when user edits
+  input.classList.add('edited'); // ✨ Add glowing yellow style
+
   fetchData();
 }
+
 
 
 function setupCollapsibles() {
@@ -592,3 +622,4 @@ const lootTables = {
 
 </body>
 </html>
+
