--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -202,27 +202,28 @@
   input[type="number"] {
   width: 100%;
   padding: 6px 10px;
-  background-color: var(--table-bg);
+  background-color: rgba(255, 255, 255, 0.08); /* ✨ brighter background */
   color: var(--text-color);
-  border: 1px solid var(--table-header-bg);
-  border-radius: 5px;
+  border: 1px solid var(--highlight-color);
+  border-radius: 6px;
   box-sizing: border-box;
   font-size: 14px;
   transition: all 0.2s ease;
-  box-shadow: 0 0 5px rgba(90, 90, 90, 0.3); /* ✨ new: soft shadow */
+  box-shadow: 0 0 5px rgba(88, 166, 255, 0.4); /* ✨ soft glow */
 }
 
 input[type="number"]:hover {
-  background-color: rgba(88, 166, 255, 0.08); /* ✨ new: very slight blue hover */
-  box-shadow: 0 0 8px rgba(88, 166, 255, 0.5); /* ✨ new: bigger shadow on hover */
+  background-color: rgba(255, 255, 255, 0.12); /* ✨ brighter on hover */
+  box-shadow: 0 0 8px rgba(88, 166, 255, 0.6); /* ✨ stronger hover glow */
 }
 
 input[type="number"]:focus {
   outline: none;
+  background-color: rgba(46, 160, 67, 0.15); /* ✨ soft green when focused */
   border-color: var(--highlight-color);
-  background-color: rgba(46, 160, 67, 0.1); /* ✨ greenish focus */
-  box-shadow: 0 0 10px rgba(46, 160, 67, 0.7); /* ✨ stronger glow */
+  box-shadow: 0 0 10px rgba(46, 160, 67, 0.8); /* ✨ strong green glow */
 }
+
 
 input.edited {
   background-color: rgba(255, 255, 100, 0.2);
@@ -253,6 +254,14 @@ input[type="checkbox"] {
   padding: 6px 10px;
   font-size: 14px;
   margin-left: 10px;
+}
+#goog-gt-tt, 
+.goog-te-balloon-frame, 
+.goog-text-highlight {
+  display: none !important;
+}
+body > .skiptranslate {
+  display: none !important;
 }
 
 </style>
