--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -260,7 +260,8 @@ input[type="checkbox"] {
 .goog-text-highlight {
   display: none !important;
 }
-body > .skiptranslate {
+
+body > .skiptranslate:not(#google_translate_element) {
   display: none !important;
 }
 
