--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -255,14 +255,11 @@ input[type="checkbox"] {
   font-size: 14px;
   margin-left: 10px;
 }
-#goog-gt-tt, 
-.goog-te-balloon-frame, 
-.goog-text-highlight {
+.goog-te-banner-frame.skiptranslate {
   display: none !important;
 }
-
-body > .skiptranslate:not(#google_translate_element) {
-  display: none !important;
+body {
+  top: 0px !important;
 }
 
 </style>
