--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -268,9 +268,10 @@ body {
 }
 
 .content.show {
-  max-height: 1000px; /* plenty big */
+  max-height: 2000px; /* plenty big for your table */
   padding-top: 10px;
 }
+
 
 </style>
 </head>
@@ -304,7 +305,7 @@ body {
 
 <div>
   <button class="collapsible">Show All Items Prices (You can adjust them)</button>
-  <div class="content">
+  <div class="content" style="max-height: 0; overflow: hidden;">
     <table id="all-items-table" style="margin-top: 10px;"></table>
   </div>
 </div>
@@ -552,10 +553,15 @@ function setupCollapsibles() {
     coll[i].addEventListener('click', function() {
       this.classList.toggle('active');
       const content = this.nextElementSibling;
-      content.classList.toggle('show');
+      if (content.classList.contains('show')) {
+        content.classList.remove('show');
+      } else {
+        content.classList.add('show');
+      }
     });
   }
 }
+
 
 
 const lootTables = {
