--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -305,10 +305,11 @@ body {
 
 <div>
   <button class="collapsible">Show All Items Prices (You can adjust them)</button>
-  <div class="content" style="max-height: 0; overflow: hidden;">
+  <div class="content">
     <table id="all-items-table" style="margin-top: 10px;"></table>
   </div>
 </div>
+
 
 <div class="footer">
   Last Updated: <span id="last-updated"></span>
