--- a/test2.html
+++ b/test2.html
@@ -2,15 +2,29 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+<script type="text/javascript">
+  function googleTranslateElementInit() {
+    new google.translate.TranslateElement({
+      pageLanguage: 'en',
+      includedLanguages: 'en,zh-CN,es,fr,de,pt,ru,ja,ko,it',
+      layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+    }, 'google_translate_element');
+  }
+  </script>
+  
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  
 <title>Dungeon Item Prices</title>
 <style>
-    body {
+  body {
     background: var(--bg-color);
     color: var(--text-color);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 20px;
   }
+
   :root {
     --bg-color: #0d1117;
     --text-color: #c9d1d9;
@@ -97,11 +111,6 @@
   .active::after {
     transform: rotate(90deg);
   }
-  .content {
-    padding: 0 18px;
-    display: none;
-    overflow: hidden;
-  }
   #average-values, #dungeon-tables {
     transition: all 0.5s ease;
     opacity: 1;
@@ -132,6 +141,11 @@
     display: inline-block;
     cursor: pointer;
   }
+  .tooltip {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+  }
   .tooltip .tooltiptext {
     visibility: hidden;
     width: 180px;
@@ -153,30 +167,149 @@
     opacity: 1;
   }
   .warning {
-    color: #ffcc00;
+    background-color: #fff3cd;
+    color: #856404;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 10px;
     font-size: 14px;
-    margin-top: 5px;
   }
+  .negative {
+    color: #ff5555;
+    font-weight: bold;
+  }
+  .warning-collapsible {
+    cursor: pointer;
+    background-color: #fff3cd;
+    border: none;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    width: 100%;
+    text-align: left;
+  }
+  .warning-content {
+    padding: 10px;
+    display: none;
+    background-color: #fff8e1;
+    border-radius: 5px;
+  }
+  input[type="number"] {
+  width: 100%;
+  padding: 6px 10px;
+  background-color: rgba(255, 255, 255, 0.08); /* ✨ brighter background */
+  color: var(--text-color);
+  border: 1px solid var(--highlight-color);
+  border-radius: 6px;
+  box-sizing: border-box;
+  font-size: 14px;
+  transition: all 0.2s ease;
+  box-shadow: 0 0 5px rgba(88, 166, 255, 0.4); /* ✨ soft glow */
+}
+
+input[type="number"]:hover {
+  background-color: rgba(255, 255, 255, 0.12); /* ✨ brighter on hover */
+  box-shadow: 0 0 8px rgba(88, 166, 255, 0.6); /* ✨ stronger hover glow */
+}
+
+input[type="number"]:focus {
+  outline: none;
+  background-color: rgba(46, 160, 67, 0.15); /* ✨ soft green when focused */
+  border-color: var(--highlight-color);
+  box-shadow: 0 0 10px rgba(46, 160, 67, 0.8); /* ✨ strong green glow */
+}
+
+
+input.edited {
+  background-color: rgba(255, 255, 100, 0.2);
+  border-color: #ffd700;
+}
+input[type="checkbox"] {
+  width: 18px;
+  height: 18px;
+  accent-color: var(--highlight-color);
+  cursor: pointer;
+  margin-right: 5px;
+}
+#google_translate_element {
+  display: inline-block;
+  background-color: var(--heading-color);
+  color: white;
+  border-radius: 8px;
+  padding: 8px 12px;
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.goog-te-combo {
+  background: var(--table-bg);
+  color: var(--text-color);
+  border: 1px solid var(--table-header-bg);
+  border-radius: 5px;
+  padding: 6px 10px;
+  font-size: 14px;
+  margin-left: 10px;
+}
+.goog-te-banner-frame.skiptranslate {
+  display: none !important;
+}
+body {
+  top: 0px !important;
+}
+.content {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.4s ease-out, padding 0.3s ease;
+}
+
+.content.show {
+  max-height: 2000px; /* plenty big for your table */
+  padding-top: 10px;
+}
+.cheat-sheet-btn {
+  display: inline-block;
+  padding: 10px 20px;
+  background: #58a6ff;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 600;
+  margin-top: 10px;
+  margin-right: 10px;
+  transition: background 0.3s ease;
+}
+.cheat-sheet-btn:hover {
+  background: #1f6feb;
+}
+
+
 </style>
 </head>
 <body>
 
-<h1>Dungeon Item Prices</h1>
+<h1>Dungeon Run Average</h1>
+<div id="google_translate_element" style="margin-bottom: 20px;"></div>
+<a href="./dungeon.html" class="cheat-sheet-btn">Token Cheat Sheet</a>
 
 <div style="margin-bottom: 20px;">
-  <label>Dungeon Run Time (minutes): <input type="number" id="run-time" value="10" min="1" onchange="fetchDataSmooth()"></label>
-  <label style="margin-left: 20px;"><input type="checkbox" id="drop-buff" onchange="fetchDataSmooth()"> Drop Quantity Buff (29.5%)</label>
-  <label style="margin-left: 20px;">
-    <input type="checkbox" id="use-bid-only" onchange="fetchDataSmooth()"> Use Bid Price Only
+  <label>Dungeon Run Time (minutes): <input type="number" id="run-time" value="10" min="1" onchange="saveSettings(); fetchDataSmooth()"></label>
+  <label style="margin-left: 20px;"><input type="checkbox" id="drop-buff" onchange="saveSettings(); fetchDataSmooth()"> Drop Quantity Buff (29.5%)</label>
+  <label style="margin-left: 20px;"><input type="checkbox" id="use-bid-only" onchange="saveSettings(); fetchDataSmooth()"> Use Bid Price Only
     <span class="tooltip">❔<span class="tooltiptext">Check to use only bid price instead of best of ask/bid.</span></span>
   </label>
-  <label style="margin-left: 20px;">
-    <input type="checkbox" id="include-keys" onchange="fetchDataSmooth()"> Include Key Prices
+  <label style="margin-left: 20px;"><input type="checkbox" id="include-keys" onchange="saveSettings(); fetchDataSmooth()"> Include Key Prices
     <span class="tooltip">❔<span class="tooltiptext">Subtract Chest Key and Entry Key prices from profit.</span></span>
+  </label>
+  <label style="margin-left: 20px;"><input type="checkbox" id="use-median" onchange="saveSettings(); fetchDataSmooth()"> Use Median Price
+    <span class="tooltip">❔<span class="tooltiptext">Use the average prices over the last 24 hours</span></span>
   </label>
 </div>
 
-<div id="warnings" class="warning"></div>
+<div id="warnings" class="warning">
+  <button class="warning-collapsible">⚠️ Show Warnings (Some price data is missing if it hasen't been on the market for 24 hours)</button>
+  <div class="warning-content" id="warnings-content"></div>
+</div>
 
 <table id="average-values" style="margin-bottom: 30px;"></table>
 
@@ -184,11 +317,12 @@
 <div id="loading-spinner"></div>
 
 <div>
-  <button class="collapsible">Show All Items Prices</button>
+  <button class="collapsible">Show All Items Prices (You can adjust them)</button>
   <div class="content">
     <table id="all-items-table" style="margin-top: 10px;"></table>
   </div>
 </div>
+
 
 <div class="footer">
   Last Updated: <span id="last-updated"></span>
@@ -216,6 +350,26 @@ function getCookie(name) {
   }
   return '';
 }
+function saveSettings() {
+  setCookie('dropBuff', document.getElementById('drop-buff').checked, 365);
+  setCookie('useBidOnly', document.getElementById('use-bid-only').checked, 365);
+  setCookie('includeKeys', document.getElementById('include-keys').checked, 365);
+  setCookie('useMedian', document.getElementById('use-median').checked, 365);
+  setCookie('runTime', document.getElementById('run-time').value, 365);
+}
+
+function loadSettings() {
+  document.getElementById('drop-buff').checked = getCookie('dropBuff') === 'true';
+  document.getElementById('use-bid-only').checked = getCookie('useBidOnly') === 'true';
+  document.getElementById('include-keys').checked = getCookie('includeKeys') === 'true';
+  const medianSetting = getCookie('useMedian');
+  document.getElementById('use-median').checked = medianSetting === '' ? true : (medianSetting === 'true');
+
+  const savedRunTime = getCookie('runTime');
+  if (savedRunTime) {
+    document.getElementById('run-time').value = savedRunTime;
+  }
+}
 
 function toggleTheme() {
   document.body.classList.toggle('light-mode');
@@ -226,8 +380,23 @@ window.onload = function() {
   if (getCookie('theme') === 'light') {
     document.body.classList.add('light-mode');
   }
+  loadSettings();
   fetchData();
+  setupWarningToggle();
 };
+
+function setupWarningToggle() {
+  const coll = document.querySelector('.warning-collapsible');
+  const content = document.querySelector('.warning-content');
+  coll.addEventListener('click', function() {
+    this.classList.toggle('active');
+    if (content.style.display === 'block') {
+      content.style.display = 'none';
+    } else {
+      content.style.display = 'block';
+    }
+  });
+}
 
 function formatNumber(num) {
   if (num >= 1e9) return (num / 1e9).toFixed(1) + 'B';
@@ -237,7 +406,12 @@ function formatNumber(num) {
 }
 
 async function fetchData() {
-  const response = await fetch('https://holychikenz.github.io/MWIApi/milkyapi.json');
+  const useMedian = document.getElementById('use-median').checked;
+  const apiUrl = useMedian
+    ? 'https://holychikenz.github.io/MWIApi/medianmarket.json'
+    : 'https://holychikenz.github.io/MWIApi/milkyapi.json';
+
+  const response = await fetch(apiUrl);
   const data = await response.json();
   const market = data.market;
   const time = data.time;
@@ -249,8 +423,8 @@ async function fetchData() {
   const container = document.getElementById('dungeon-tables');
   container.innerHTML = '';
   const avgTable = document.getElementById('average-values');
-  const warnings = document.getElementById('warnings');
-  warnings.innerHTML = '';
+  const warningsContent = document.getElementById('warnings-content');
+  warningsContent.innerHTML = '';
   let avgHtml = '<thead><tr><th>Dungeon</th><th>Avg Chest Value</th><th>Profit/Hour</th><th>Profit/Day</th></tr></thead><tbody>';
 
   const allItems = {};
@@ -267,11 +441,49 @@ async function fetchData() {
   for (const dungeon in lootTables) {
     let averageValue = 0;
     let hasData = false;
+    const missingAskItems = [];
+    const ignoreList = ['Token', 'Treasure', 'Coin', 'Cape', 'Quiver', 'Cloak'];
     const loot = lootTables[dungeon];
     for (const drop of loot) {
       const marketItem = market[drop.name];
       if (!marketItem) continue;
-      const price = useBidOnly ? (marketItem.bid ?? 0) : Math.max(marketItem.ask ?? 0, marketItem.bid ?? 0);
+      const type = useBidOnly ? 'bid' : 'ask';
+      let price = 0;
+      if (customPrices[drop.name] && customPrices[drop.name][type]) {
+        price = customPrices[drop.name][type];
+      } else {
+        price = useBidOnly ? (marketItem.bid ?? 0) : Math.max(marketItem.ask ?? 0, marketItem.bid ?? 0);
+      }
+
+      //  If it's a Token, adjust price to be based on best money/token value
+      if (drop.name.includes('Token')) {
+        const tokenItems = dungeons[dungeon];
+        if (tokenItems) {
+          let bestValuePerToken = 0;
+          for (const item in tokenItems) {
+            const tokens = tokenItems[item];
+            const itemMarket = market[item];
+            if (!itemMarket) continue;
+            const bestMarketPrice = useBidOnly ? (itemMarket.bid ?? 0) : Math.max(itemMarket.ask ?? 0, itemMarket.bid ?? 0);
+            const valuePerToken = tokens > 0 ? (bestMarketPrice / tokens) : 0;
+            if (valuePerToken > bestValuePerToken) {
+              bestValuePerToken = valuePerToken;
+            }
+          }
+          if (bestValuePerToken > 0) {
+            price = bestValuePerToken; // ✅ override token price
+          }
+        }
+      }
+
+
+
+      if ((marketItem.ask === undefined || marketItem.ask <= 0) && !useBidOnly) {
+        if (!ignoreList.some(word => drop.name.includes(word))) {
+          missingAskItems.push(drop.name);
+        }
+      }
+
       if (price <= 0) continue;
       hasData = true;
       const expectedQty = (drop.min + drop.max) / 2;
@@ -280,9 +492,14 @@ async function fetchData() {
     }
 
     if (!hasData) {
-      warnings.innerHTML += `<div>⚠️ Warning: No valid market prices found for ${dungeon} items.</div>`;
+      warningsContent.innerHTML += `<div>⚠️ Warning: No valid market prices found for ${dungeon} items.</div>`;
+    }
+    for (const missingItem of missingAskItems) {
+      warningsContent.innerHTML += `<div>⚠️ Missing Ask Price: ${missingItem} (${dungeon})</div>`;
     }
 
+
+    let keyCostText = '';
     if (includeKeys && keyItems[dungeon]) {
       for (const keyName of keyItems[dungeon]) {
         const keyMarketItem = market[keyName];
@@ -292,6 +509,7 @@ async function fetchData() {
           allItems[keyName] = keyMarketItem;
         }
       }
+      keyCostText = ' <small>(after keys)</small>';
     }
 
     const runTimeMinutes = parseFloat(document.getElementById('run-time').value) || 10;
@@ -302,19 +520,49 @@ async function fetchData() {
     const profitPerHour = averageValue * runsPerHour * buffMultiplier;
     const profitPerDay = profitPerHour * 24;
 
-    avgHtml += `<tr><td>${dungeon}</td><td>${formatNumber(averageValue)}</td><td>${formatNumber(profitPerHour)}</td><td>${formatNumber(profitPerDay)}</td></tr>`;
+    const formattedAverage = formatNumber(Math.abs(averageValue));
+    const avgValueFormatted = averageValue < 0 
+      ? `<span class="negative">-${formattedAverage}</span>` 
+      : formattedAverage;
+
+
+      const formattedProfitHour = profitPerHour < 0
+        ? `<span class="negative">-${formatNumber(Math.abs(profitPerHour))}</span>`
+        : formatNumber(profitPerHour);
+
+      const formattedProfitDay = profitPerDay < 0
+        ? `<span class="negative">-${formatNumber(Math.abs(profitPerDay))}</span>`
+        : formatNumber(profitPerDay);
+
+      avgHtml += `<tr><td>${dungeon}</td><td>${avgValueFormatted}${keyCostText}</td><td>${formattedProfitHour}</td><td>${formattedProfitDay}</td></tr>`;
+
   }
 
   avgHtml += '</tbody>';
   avgTable.innerHTML = avgHtml;
 
   const allItemsTable = document.getElementById('all-items-table');
-  let allHtml = '<thead><tr><th>Item</th><th>Ask</th><th>Bid</th></tr></thead><tbody>';
-  for (const itemName in allItems) {
-    const item = allItems[itemName];
-    allHtml += `<tr><td>${itemName}</td><td>${item.ask !== undefined ? formatNumber(item.ask) : 'N/A'}</td><td>${item.bid !== undefined ? formatNumber(item.bid) : 'N/A'}</td></tr>`;
+  let allHtml = '';
+
+  for (const dungeon in lootTables) {
+    allHtml += `<thead><tr><th colspan="3" style="background: var(--heading-color); color: white; font-size: 18px;">${dungeon}</th></tr>`;
+    allHtml += '<tr><th>Item</th><th>Ask</th><th>Bid</th></tr></thead><tbody>';
+
+    const drops = lootTables[dungeon];
+    for (const drop of drops) {
+      const itemName = drop.name;
+      const item = allItems[itemName];
+      if (!item) continue; // Skip if item isn't in market
+      allHtml += `<tr>
+        <td>${itemName}</td>
+        <td><input type="number" value="${customPrices[itemName]?.ask ?? (item.ask !== undefined ? item.ask : '')}" data-item="${itemName}" data-type="ask" onchange="updateCustomPrice(this)"></td>
+        <td><input type="number" value="${customPrices[itemName]?.bid ?? (item.bid !== undefined ? item.bid : '')}" data-item="${itemName}" data-type="bid" onchange="updateCustomPrice(this)"></td>
+      </tr>`;
+    }
+
+    allHtml += '</tbody>';
   }
-  allHtml += '</tbody>';
+
   allItemsTable.innerHTML = allHtml;
 
   setupCollapsibles();
@@ -322,34 +570,92 @@ async function fetchData() {
 
 function fetchDataSmooth() {
   const avgTable = document.getElementById('average-values');
-  const container = document.getElementById('dungeon-tables');
-  const spinner = document.getElementById('loading-spinner');
-  avgTable.classList.add('fade-out');
-  container.classList.add('fade-out');
-  spinner.style.display = 'block';
+  avgTable.style.opacity = 0.5;
   setTimeout(() => {
-    fetchData().then(() => {
-      avgTable.classList.remove('fade-out');
-      container.classList.remove('fade-out');
-      spinner.style.display = 'none';
-    });
-  }, 300);
+    fetchData();
+    avgTable.style.opacity = 1;
+  }, 200);
 }
+
+const customPrices = {};
+
+function updateCustomPrice(input) {
+  const item = input.getAttribute('data-item');
+  const type = input.getAttribute('data-type');
+  const value = parseFloat(input.value) || 0;
+
+  if (!customPrices[item]) customPrices[item] = {};
+  customPrices[item][type] = value;
+
+  input.classList.add('edited'); // ✨ Add glowing yellow style
+
+  fetchData();
+}
+
+
 
 function setupCollapsibles() {
   const coll = document.getElementsByClassName('collapsible');
   for (let i = 0; i < coll.length; i++) {
-    coll[i].addEventListener('click', function() {
+    coll[i].addEventListener('click', function(event) {
+      // 👇 Ignore clicks on inputs inside the collapsible
+      if (event.target.tagName === 'INPUT' || event.target.tagName === 'LABEL') {
+        event.stopPropagation();
+        return;
+      }
+
       this.classList.toggle('active');
       const content = this.nextElementSibling;
-      if (content.style.display === 'block') {
-        content.style.display = 'none';
+      if (content.style.maxHeight) {
+        content.style.maxHeight = null;
+        content.style.paddingTop = "0";
       } else {
-        content.style.display = 'block';
+        content.style.maxHeight = content.scrollHeight + "px";
+        content.style.paddingTop = "10px";
       }
     });
   }
 }
+
+
+
+const dungeons = {
+  'D1': {
+    'Chimerical Essence': 1,
+    'Griffin Leather': 600,
+    'Manticore Sting': 1000,
+    'Jackalope Antler': 1200,
+    'Dodocamel Plume': 3000,
+    'Griffin Talon': 3000
+  },
+  'D2': {
+    'Sinister Essence': 1,
+    "Acrobat's Ribbon": 2000,
+    "Magician's Cloth": 2000,
+    'Chaotic Chain': 3000,
+    'Cursed Ball': 3000
+  },
+  'D3': {
+    'Enchanted Essence': 1,
+    'Royal Cloth': 2000,
+    "Knight's Ingot": 2000,
+    "Bishop's Scroll": 2000,
+    'Regal Jewel': 3000,
+    'Sundering Jewel': 3000
+  },
+  'D4': {
+    'Pirate Essence': 1,
+    'Marksman Brooch': 2000,
+    'Corsair Crest': 2000,
+    'Damaged Anchor': 2000,
+    'Maelstrom Plating': 2000,
+    'Kraken Leather': 2000,
+    'Kraken Fang': 3000
+  }
+};
+
+
+
 const lootTables = {
   'D1': [ // Chimerical Chest
     { name: 'Chimerical Essence', probability: 100, min: 400, max: 800 },
@@ -467,6 +773,6 @@ const lootTables = {
   ]
 };
 </script>
-
+Bagz ❤️ Goats
 </body>
 </html>
