--- a/dungeon.html
+++ b/dungeon.html
@@ -102,6 +102,23 @@
     display: none;
     overflow: hidden;
   }
+  .cheat-sheet-btn {
+  display: inline-block;
+  padding: 10px 20px;
+  background: #58a6ff;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 600;
+  margin-top: 10px;
+  margin-right: 10px;
+  transition: background 0.3s ease;
+}
+.cheat-sheet-btn:hover {
+  background: #1f6feb;
+}
+
 </style>
 <script>
   function setCookie(name, value, days) {
@@ -136,6 +153,7 @@
 <body>
 
 <h1>Dungeon Item Prices</h1>
+<a href="./DungeonAverage.html" class="cheat-sheet-btn">Dungeon Chest Calculator</a>
 
 <div id="dungeon-tables"></div>
 
