--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -317,7 +317,7 @@ body {
 <div id="loading-spinner"></div>
 
 <div>
-  <button class="collapsible">Show All Items Prices (You can adjust them)</button>
+  <button class="collapsible">Show All Items Prices (You can adjust them) (Refresh if this brakes)</button>
   <div class="content">
     <table id="all-items-table" style="margin-top: 10px;"></table>
   </div>
