--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -307,7 +307,7 @@ body {
 </div>
 
 <div id="warnings" class="warning">
-  <button class="warning-collapsible">⚠️ Show Warnings (Some price data is missing if it hasen't been on the market for 24 hours)</button>
+  <button class="warning-collapsible">⚠️ Show Warnings (Some price data is missing if it hasen't been on the market for 24 hours) (Click for more info)</button>
   <div class="warning-content" id="warnings-content"></div>
 </div>
 
