--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -307,7 +307,7 @@ body {
 </div>
 
 <div id="warnings" class="warning">
-  <button class="warning-collapsible">⚠️ Show Warnings (Some price data is missing if it hasen't been on the market for 24 hours)</button>
+  <button class="warning-collapsible">⚠️ Show Warnings (Some price data is missing if it hasen't been on the market for 24 hours) (Click for more info)</button>
   <div class="warning-content" id="warnings-content"></div>
 </div>
 
@@ -317,7 +317,7 @@ body {
 <div id="loading-spinner"></div>
 
 <div>
-  <button class="collapsible">Show All Items Prices (You can adjust them)</button>
+  <button class="collapsible">Show All Items Prices (You can adjust them) (Refresh if this breaks im not fixing it)</button>
   <div class="content">
     <table id="all-items-table" style="margin-top: 10px;"></table>
   </div>
@@ -790,3 +790,4 @@ const lootTables = {
 Bagz ❤️ Goats
 </body>
 </html>
+
