--- a/dungeon.html
+++ b/dungeon.html
@@ -153,6 +153,7 @@
 <body>
 
 <h1>Dungeon Item Prices</h1>
+  <h1>HolyChickenz api is gone, the official api has a different format so until I get around to reworking all my code this is dead</h1>
 <a href="./DungeonAverage.html" class="cheat-sheet-btn">Dungeon Chest Calculator</a>
 
 <div id="dungeon-tables"></div>
