--- a/DungeonAverage.html
+++ b/DungeonAverage.html
@@ -289,6 +289,7 @@ body {
 <body>
 
 <h1>Dungeon Run Average</h1>
+  <h1>HolyChickenz api is gone, the official api has a different format so until I get around to reworking all my code this is dead</h1>
 <div id="google_translate_element" style="margin-bottom: 20px;"></div>
 <a href="./dungeon.html" class="cheat-sheet-btn">Token Cheat Sheet</a>
 
