--- a/dungeon.html
+++ b/dungeon.html
@@ -153,7 +153,7 @@
 <body>
 
 <h1>Dungeon Item Prices</h1>
-  <h1>HolyChickenz api is gone, the official api has a different format so until I get around to reworking all my code this is dead</h1>
+
 <a href="./DungeonAverage.html" class="cheat-sheet-btn">Dungeon Chest Calculator</a>
 
 <div id="dungeon-tables"></div>
@@ -169,45 +169,45 @@
 
 <script>
 async function fetchData() {
-    const response = await fetch('https://holychikenz.github.io/MWIApi/milkyapi.json');
+    const response = await fetch('https://www.milkywayidle.com/game_data/marketplace.json');
     const data = await response.json();
 
-    const market = data.market;
-    const time = data.time;
+    const marketdata = data.marketData;
+    const time = data.timestamp;
     document.getElementById('last-updated').textContent = new Date(time * 1000).toLocaleString();
 
-    const dungeons = {
+   const dungeons = {
         'D1': {
-            'Chimerical Essence': 1,
-            'Griffin Leather': 600,
-            'Manticore Sting': 1000,
-            'Jackalope Antler': 1200,
-            'Dodocamel Plume': 3000,
-            'Griffin Talon': 3000
+            '/items/chimerical_essence': 1,
+            '/items/griffin_leather': 600,
+            '/items/manticore_sting': 1000,
+            '/items/jackalope_antler': 1200,
+            '/items/dodocamel_plume': 3000,
+            '/items/griffin_talon': 3000
         },
         'D2': {
-            'Sinister Essence': 1,
-            "Acrobat's Ribbon": 2000,
-            "Magician's Cloth": 2000,
-            'Chaotic Chain': 3000,
-            'Cursed Ball': 3000
+            '/items/sinister_essence': 1,
+            "/items/acrobats_ribbon": 2000,
+            "/items/magicians_cloth": 2000,
+            '/items/chaotic_chain': 3000,
+            '/items/cursed_ball': 3000
         },
         'D3': {
-            'Enchanted Essence': 1,
-            'Royal Cloth': 2000,
-            "Knight's Ingot": 2000,
-            "Bishop's Scroll": 2000,
-            'Regal Jewel': 3000,
-            'Sundering Jewel': 3000
+            '/items/enchanted_essence': 1,
+            '/items/royal_cloth': 2000,
+            '/items/knights_ingot': 2000,
+            '/items/bishops_scroll': 2000,
+            '/items/regal_jewel': 3000,
+            '/items/sundering_jewel': 3000
         },
         'D4': {
-            'Pirate Essence': 1,
-            'Marksman Brooch': 2000,
-            'Corsair Crest': 2000,
-            'Damaged Anchor': 2000,
-            'Maelstrom Plating': 2000,
-            'Kraken Leather': 2000,
-            'Kraken Fang': 3000
+            '/items/pirate_essence': 1,
+            '/items/marksman_brooch': 2000,
+            '/items/corsair_crest': 2000,
+            '/items/damaged_anchor': 2000,
+            '/items/maelstrom_plating': 2000,
+            '/items/kraken_leather': 2000,
+            '/items/kraken_fang': 3000
         }
     };
 
@@ -221,8 +221,8 @@ async function fetchData() {
         
         for (const item in items) {
             const tokens = items[item];
-            const ask = market[item]?.ask ?? -1;
-            const bid = market[item]?.bid ?? -1;
+            const ask = marketdata[item][0]?.a ?? -1;
+            const bid = marketdata[item][0]?.b ?? -1;
             const maxVal = Math.max(ask, bid);
             const valuePerToken = (maxVal > 0 && tokens > 0) ? (maxVal / tokens) : 0;
             rows.push({item, tokens, ask, bid, valuePerToken});
